--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "fs-extra": "3.0.1",
+    "knuth-shuffle": "^1.0.8",
     "object-assign": "4.1.1",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.2",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-bs-notifier": "^5.0.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
